# eczoo_sitegen

./: .eslintrc.json  .gitattributes  .gitignore  .yarnrc.yml  CLAUDE.md  README.md  YARN_UP_CMDS.md  downloaded_citationinfo_cache.json  eslint.config.js  flm_howto.md  package.json
_zoodb_citations_cache/: _anystyle_manual_citations_cache.json  cache_compiled_citations.json  package.json
artwork/: eczbskybanner.afdesign  eczoo_icon.afdesign
docs/: INDEX.md  architecture.md  eczoodb.md  jscomponents.md  site.md  workflows.md
eczoodb/: CODELISTS_HOWTO.md  README.md  citationsoptions.js  citeextsources.js  compile_codelist.js  dirs_defaults.browser.js  dirs_defaults.js  downloaded_citationinfo_cache.json  eczoo-bib-style.csl  eczoo-bib-style.js  eczoo-bib-style.json  eczoodb.js  fullopts.js  load_yamldb.js  objects_config.js  package.json  permalinks.js  render_code.js  render_code_hierarchy.js  render_codelist.js  render_domain.js  render_kingdom.js  render_person.js  render_utils.js  stats.js  use_llm_environment.js  use_llm_processor.js  use_relations_populator.js  use_searchable_text_processor.js
jscomponents/: .gitignore  .parcelrc  README.md  package.json
pdfexport/: .gitignore  .yarnrc.yml  ecznote.dtx  gen_latex.js  gen_latex_code_page.js  index.js  main.js  package.json
previewtool/: .parcelrc  package.json  previewApp.html  previewApp.jsx  previewApp.scss  runPreview.js
pyeczoo/: .gitignore  pyproject.toml
pyeczoo/pyeczoo/: __init__.py  load.py
pyeczoo/test/: mysimpletest.py  mysimpletest2.py  mysimpletest_old.py
scripts/: README.md  zooStats.js  (+5 more)
(+254 files in other folders)
